# UniREC

./: .gitignore  .pre-commit-config.yaml  AI_USAGE.md  CODEOWNERS  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci-backend.yml  ci-e2e.yml  ci-extension.yml  ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: briefs.py  health.py
backend/app/core/: config.py  errors.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py  enums.py  schemas.py
backend/app/providers/: __init__.py  base.py  factory.py  fake.py  openai.py
backend/app/repositories/: decode_run.py
backend/app/services/: brief_decoder.py  cache.py  idempotency.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_decode_runs.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_flow.py
backend/tests/integration/: test_api_failures.py  test_api_happy.py  test_health.py  test_idempotency.py  test_rate_limit.py  test_run_get.py
backend/tests/unit/: test_brief_decoder.py  test_cache.py  test_decode_run_repository.py  test_schemas.py
docker/: docker-compose.test.yml  docker-compose.yml
docs/: README.md  architecture.md  assumptions.md  async-job-design.md  delivery-plan.md  task-context.md
extension/: Dockerfile  eslint.config.js  package.json  tsconfig.json  wxt.config.ts
extension/src/: styles.css
extension/src/api/: client.ts
extension/src/components/: BriefInput.test.tsx  BriefInput.tsx  CopyButton.tsx  ErrorState.tsx  TabBar.tsx  (+9 more)
(+8 files in other folders)
